// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`placeOptionsAbove = true 1`] = `
.emotion-0 {
  position: absolute;
  background-color: white;
  width: 600px;
  bottom: 743px;
  left: 15px;
}

<div
  className="emotion-0"
/>
`;

exports[`styles 1`] = `
.emotion-0 {
  position: absolute;
  background-color: white;
  width: 600px;
  top: 125px;
  left: 15px;
}

<div
  className="emotion-0"
/>
`;

exports[`styles_hasOptions = false 1`] = `
.emotion-0 {
  position: absolute;
  background-color: white;
  width: 600px;
  top: 125px;
  left: 15px;
  display: none;
}

<div
  className="emotion-0"
/>
`;

exports[`styles_rightToLeft = true 1`] = `
.emotion-0 {
  position: absolute;
  background-color: white;
  width: 600px;
  top: 125px;
  left: 15px;
  -webkit-transform: scaleX(-1);
  -ms-transform: scaleX(-1);
  transform: scaleX(-1);
}

<div
  className="emotion-0"
/>
`;
